<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashScreen"
    android:background="@drawable/login"
    android:orientation="vertical"
    android:id="@+id/loSplash">


    <Button
        android:id="@+id/btnSplashLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buy_button"
        android:text="Login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSplashLogin"
        app:layout_constraintVertical_bias="0.936"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tvCopyRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_75sdp"
            android:text="You not a member?"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvSplashSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:clickable="true"
            android:text="Register!"
            android:textColor="@color/ourRed"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>