...
            android:maxLength="10"
            android:padding="5dp" />



        <Button
            android:id="@+id/btnChangePass"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
...
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="#66CDAA"
            android:clickable="true"
            android:padding="5dp"
            android:textAllCaps="false"
            android:text="Change Password" />

        <EditText
            android:id="@+id/etoldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
...
